--- a/chocosam/css/turbocss.css
+++ b/chocosam/css/turbocss.css
@@ -2,7 +2,7 @@
     position: fixed;
     color: white;
     width: 200px;
-    padding: 5px;
+    padding: 0px;
      height: 100%;
      background: #2b2b2b;
      box-shadow: 0px 0px 5px #030305b3;
@@ -16,4 +16,17 @@
      overflow: auto;
      z-index: 1;
      padding: 5px;
+}
+
+#perfil{
+	width: 100%;
+	height: 200px;
+	padding: 5px;
+	
+}
+
+.menu {
+	width: 100%;
+	height: 100px;
+	padding: 5px;
 }
