--- a/chocosam/css/turbocss.css
+++ b/chocosam/css/turbocss.css
@@ -27,8 +27,12 @@
 
 .menu {
 	width: 100%;
-	height: 100px;
+	height: 90px;
 	padding: 5px;
+	
 }
 
+.menu:hover {
+	background-color: rgba(100, 149, 237, 0.84);
+}
 /**/
